...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSearch2"
        android:layout_width="171dp"
        android:layout_height="57dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/calibriregular"
        android:text="@string/continues"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBudget"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/tvBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:text="@string/budget"
        android:textColor="@color/schwarz"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFriend" />

    <CheckBox
        android:id="@+id/inputAlone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/calibriregular"
        android:onClick="onCheckboxClicked"
        android:text="@string/alone"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWith" />

    <CheckBox
        android:id="@+id/inputPartner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibriregular"
        android:onClick="onCheckboxClicked"
        android:text="@string/partner"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAlone" />

    <CheckBox
        android:id="@+id/inputFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibriregular"
        android:onClick="onCheckboxClicked"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btSearch2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBudget" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibriregular"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@color/Hintergrundblau"
...
