<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputAlter2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInformation">

    <!--  android:text="@string/inputName" /> -->

...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <RadioButton
            android:id="@+id/inputFemale"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/calibriregular"
            android:text="@string/cbFemale"
            android:textColor="@color/schwarz"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/inputMale"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:fontFamily="@font/calibriregular"
            android:text="@string/cbMale"
            android:textColor="@color/schwarz"
            android:textSize="30dp" />
...
