...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EAEA"
    tools:context=".Search2">

    <EditText
        android:id="@+id/inputPostal"
        android:layout_width="244dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/calibriregular"
        android:hint="@string/postalcode"
...
        android:textColorHighlight="@color/Hintergrundblau"
        android:textColorHint="@color/schwarz"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTown" />

    <Button
        android:id="@+id/btSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/calibriregular"
        android:minWidth="250dp"
        android:text="@string/showme"
...
